fixed style bugs on small landscape screen, contact page

--- a/src/components/contact-form/ContactForm.module.scss
+++ b/src/components/contact-form/ContactForm.module.scss
@@ -67,6 +67,9 @@
       height: 70vh;
       padding: .5rem;
     }    
+    .contactForm > div > div > input {
+      padding-top: 5px;
+    }
   }
 }
 
